--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   app:
-    image: sirajulmuneer414/lenscraft:latest
+    image: ${DOCKER_IMAGE:-sirajulmuneer414/lenscraft}:latest
     container_name: lenscraft-app
     ports:
       - "8080:8080"
